<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="l_appName">Fitness Tracker</string>
    <string name="t_loadingText">Loading data&#x2026;</string>

    <string name="t_nextButton">&#8680;</string>
    <string name="t_optionsButton">&#9881;</string>
    <string name="t_workoutInfoButtonText">%1$s V%2$s</string>
    <string name="t_workoutNameLabel">Name:</string>
    <string name="t_workoutVersionText">V%1$s</string>
    <string name="t_workoutDescriptionLabel">Description:</string>
    <string name="t_workoutCounterText">Total workout units (\u03A3): %1$s</string>
    <string name="t_averageIntervalText">Average interval (\u00D8): %1$s days</string>
    <string name="t_lastWorkoutDateText">Last workout unit: %1$s</string>

    <string name="t_editModeButton">Switch edit mode</string>
    <string name="t_themeButton">Switch theme</string>
    <string name="t_debugPrintLogButton">Print debug log</string>
    <string name="t_debugNextLogModeButton">Next debug log mode</string>
    <string name="t_debugRemoveWorkoutUnitsButton">Remove debug workout units</string>
    <string name="t_debugResetWorkoutButton">Reset current workout</string>
    <string name="t_addExerciseButton">Add new exercise</string>
    <string name="t_finishButton">Finish workout (%s)</string>

    <string name="h_emptyHint">-</string>
    <string name="h_exerciseName">Exercise Name</string>
    <string name="h_exerciseToken">ID</string>

    <string name="t_removeExerciseSetButton">x</string>
    <string name="t_exerciseRepeatsLabel">Repeats:</string>
    <string name="t_exerciseWeightLabel">Weight:</string>
    <string name="t_exerciseIncrement">+</string>
    <string name="t_exerciseRemarksLabel">Remarks:</string>
    <string name="t_moveUpButton">&#8679;</string>
    <string name="t_moveDownButton">&#8681;</string>
    <string name="t_exerciseAddSetButton">Add new set</string>
</resources>