<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable name="isEditModeActive" type="boolean" />
        <variable name="exerciseInfo" type="com.romanbrunner.apps.fitnesstracker.model.ExerciseInfo" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:layout_marginEnd="@dimen/item_horizontal_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_medium_rounded"
            android:padding="@dimen/comment_padding"
            >

            <LinearLayout
                android:id="@+id/nameRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/exerciseNameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/comment_horizontal_margin_large"
                    android:ems="14"
                    android:inputType="textCapWords"
                    android:text="@={exerciseInfo.name}"
                    android:autofillHints="text"
                    android:hint="@string/h_exerciseName"
                    />

                <EditText
                    android:id="@+id/exerciseTokenField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/comment_horizontal_margin_large"
                    android:ems="2"
                    android:inputType="textNoSuggestions"
                    android:text="@={exerciseInfo.token}"
                    android:importantForAutofill="no"
                    android:hint="@string/h_exerciseToken"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/noteRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/exerciseRemarksLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/comment_horizontal_margin_small"
                    android:text="@string/t_exerciseRemarksLabel"
                    android:textSize="@dimen/comment_text_size"
                    />

                <EditText
                    android:id="@+id/exerciseRemarksField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/comment_horizontal_margin_large"
                    android:ems="13"
                    android:inputType="textNoSuggestions"
                    android:text="@={exerciseInfo.remarks}"
                    android:autofillHints="text"
                    android:hint="@string/h_emptyHint"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/setsBoard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="LinearLayoutManager"
                />

            <Button
                android:id="@+id/addSetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_exerciseAddSetButton"
                app:visibleGone="@{!isEditModeActive}"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>