<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable name="isDebugModeActive" type="boolean" />
        <variable name="isTopBoxMinimized" type="boolean" />
        <variable name="isWorkoutLoading" type="boolean" />
        <variable name="isEditModeActive" type="boolean" />
        <variable name="averageInterval" type="String" />
        <variable name="lastWorkoutDate" type="String" />
        <variable name="finishedExercises" type="String" />
        <variable name="workoutInfo" type="com.romanbrunner.apps.fitnesstracker.model.WorkoutInfo" />
        <variable name="workoutUnit" type="com.romanbrunner.apps.fitnesstracker.model.WorkoutUnit" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/bgColor"
        android:padding="4dp"
        tools:context=".ui.MainActivity"
        >

        <LinearLayout
            android:id="@+id/topBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:orientation="vertical"
            android:background="@drawable/border_medium_angular"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerRowOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/workoutLoadingNotification"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/t_loadingText"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:visibleGone="@{isWorkoutLoading}"
                    />

                <Button
                    android:id="@+id/nextStudioButton"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/increment_button_size"
                    android:layout_height="@dimen/increment_button_size"
                    android:layout_marginEnd="@dimen/comment_horizontal_margin_large"
                    android:text="@string/t_nextButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:visibleGone="@{!isWorkoutLoading}"
                    />

                <EditText
                    android:id="@+id/studioText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/comment_horizontal_margin_large"
                    android:layout_marginEnd="@dimen/comment_horizontal_margin_large"
                    android:autofillHints="text"
                    android:hint="@string/h_emptyHint"
                    android:inputType="textNoSuggestions"
                    android:text="@{workoutInfo.studio}"
                    android:textAllCaps="false"
                    android:textSize="@dimen/comment_text_size"
                    android:focusable="false"
                    android:enabled="false"
                    android:focusableInTouchMode="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/nextStudioButton"
                    app:layout_constraintEnd_toStartOf="@+id/dateField"
                    app:layout_constraintTop_toTopOf="parent"
                    app:visibleGone="@{!isWorkoutLoading}"
                    />

                <EditText
                    android:id="@+id/dateField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="date"
                    android:ems="5"
                    android:hint="@string/h_emptyHint"
                    android:inputType="date"
                    android:text="@={workoutUnit.date}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:visibleGone="@{!isWorkoutLoading}"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerRowTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/nextWorkoutButton"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/increment_button_size"
                    android:layout_height="@dimen/increment_button_size"
                    android:layout_marginEnd="@dimen/comment_horizontal_margin_large"
                    android:text="@string/t_nextButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:visibleGone="@{!isWorkoutLoading ? !isEditModeActive : false}"
                    />

                <EditText
                    android:id="@+id/workoutText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/comment_horizontal_margin_large"
                    android:layout_marginEnd="@dimen/comment_horizontal_margin_large"
                    android:autofillHints="text"
                    android:hint="@string/h_emptyHint"
                    android:inputType="textNoSuggestions"
                    android:text="@{@string/t_workoutInfoButtonText(workoutInfo.name, workoutInfo.version)}"
                    android:textAllCaps="false"
                    android:textSize="@dimen/comment_text_size"
                    android:focusable="false"
                    android:enabled="false"
                    android:focusableInTouchMode="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/nextWorkoutButton"
                    app:layout_constraintEnd_toStartOf="@+id/optionsButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:visibleGone="@{!isWorkoutLoading}"
                    />

                <Button
                    android:id="@+id/optionsButton"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/increment_button_size"
                    android:layout_height="@dimen/increment_button_size"
                    android:text="@string/t_optionsButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAllCaps="false"
                    android:textSize="@dimen/options_button_size"
                    app:visibleGone="@{!isWorkoutLoading}"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/infoBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/comment_horizontal_margin_small"
                android:layout_marginEnd="@dimen/comment_horizontal_margin_small"
                android:orientation="vertical"
                android:background="@drawable/border_small_angular"
                app:visibleGone="@{!isTopBoxMinimized ? !isWorkoutLoading : false}"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/workoutDescriptionRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/comment_horizontal_margin_small"
                    android:layout_marginBottom="@dimen/comment_horizontal_margin_small"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/workoutDescriptionLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/t_workoutDescriptionLabel"
                        android:textSize="@dimen/comment_text_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/workoutDescriptionText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/comment_horizontal_margin_small"
                        android:paddingTop="0dp"
                        android:autofillHints="text"
                        android:hint="@string/h_emptyHint"
                        android:inputType="textMultiLine"
                        android:text="@={workoutInfo.description}"
                        android:textSize="@dimen/comment_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/workoutDescriptionLabel"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/workoutCounterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/comment_horizontal_margin_small"
                    android:layout_marginBottom="@dimen/comment_horizontal_margin_small"
                    android:text="@{@string/t_workoutCounterText(workoutUnit.id)}"
                    android:textSize="@dimen/comment_text_size"
                    />

                <TextView
                    android:id="@+id/averageIntervalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/comment_horizontal_margin_small"
                    android:layout_marginBottom="@dimen/comment_horizontal_margin_small"
                    android:text="@{@string/t_averageIntervalText(averageInterval)}"
                    android:textSize="@dimen/comment_text_size"
                    />

                <TextView
                    android:id="@+id/lastWorkoutDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/comment_horizontal_margin_small"
                    android:layout_marginBottom="@dimen/comment_horizontal_margin_small"
                    android:text="@{@string/t_lastWorkoutDateText(lastWorkoutDate)}"
                    android:textSize="@dimen/comment_text_size"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/editModeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_editModeButton"
                app:visibleGone="@{!isTopBoxMinimized}" />

            <Button
                android:id="@+id/debugPrintLogButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_debugPrintLogButton"
                android:visible="@bool/DEBUG"
                app:visibleGone="@{!isTopBoxMinimized ? isDebugModeActive : false}"
                />

            <Button
                android:id="@+id/debugNextLogModeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_debugNextLogModeButton"
                android:visible="@bool/DEBUG"
                app:visibleGone="@{!isTopBoxMinimized ? isDebugModeActive : false}"
                />

            <Button
                android:id="@+id/debugRemoveWorkoutUnitsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_debugRemoveWorkoutUnitsButton"
                android:visible="@bool/DEBUG"
                app:visibleGone="@{!isTopBoxMinimized ? isDebugModeActive : false}"
                />

            <Button
                android:id="@+id/debugResetWorkoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_debugResetWorkoutButton"
                android:visible="@bool/DEBUG"
                app:visibleGone="@{!isTopBoxMinimized ? isDebugModeActive : false}"
                />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dataList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/exercisesLoadingNotification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/t_loadingText"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:visibleGone="@{isWorkoutLoading}"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exercisesBoard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/addExerciseButton"
                app:layoutManager="LinearLayoutManager"
                app:visibleGone="@{!isWorkoutLoading}"
                />

            <Button
                android:id="@+id/addExerciseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_addExerciseButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/finishButton"
                app:visibleGone="@{!isWorkoutLoading ? isEditModeActive : false}"
                />

            <Button
                android:id="@+id/finishButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/t_finishButton(finishedExercises)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:visibleGone="@{!isWorkoutLoading ? !isEditModeActive : false}"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>